# AgentDiff

./: README.md  pyproject.toml
agentdiff/: __init__.py  analyzer.py  cli.py  diff_parser.py  html_report.py  ignore.py  markdown.py  models.py  plan_validator.py  plugins.py  sarif.py  secret_ignore.py  webserver.py
analyzers/: __init__.py  ast_heuristics.py  categorize.py  grouping.py  patterns.py  related.py  risk.py
benchmarks/: BASELINE.md  generate_synthetic_diff.py  run_benchmark.py
benchmarks/fixtures/: large_500.diff
examples/: sample.diff  sample_analysis.json  sample_analysis.sarif.json  sample_plan.json  sample_report.html  sample_summary.md  secret_ignore.example
examples/plugins/: plugins.example.json  todo_detector.py
schemas/: execution_plan.v1.json
scripts/: check_benchmark.sh
tests/: test_analysis.py  test_ast_heuristics.py  test_benchmark_fixture.py  test_cli.py  test_diff_parser.py  test_grouping.py  test_html_report.py  test_markdown.py  test_plan_validation.py  test_plugins.py  test_sarif.py  test_secret_detector.py
web/: app.js  index.html  styles.css
