[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdiff"
version = "0.1.0"
description = "Diff viewer optimized for code changes produced by coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AgentDiff Contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]

[project.scripts]
agentdiff = "agentdiff.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
